--- a/level3.html
+++ b/level3.html
@@ -59,8 +59,8 @@
   <div class="subject" onclick="togglePapers('csu3200')">
     CSU3200
     <div id="csu3200" class="paper-links">
-      <a href="https://drive.google.com/your-cat-paper-link" target="_blank">CAT Papers</a>
-      <a href="https://drive.google.com/your-final-paper-link" target="_blank">Final Papers</a>
+      <a href="https://drive.google.com/drive/folders/1NAkPuZizTiVhWfbeMAm2-lvEobV6qxbW?usp=drive_link" target="_blank">CAT Papers</a>
+      <a href="https://drive.google.com/drive/folders/1Hyyh_YJ_2pVsQXxi-KEUuc6ybi_nuXYg?usp=drive_link" target="_blank">Final Papers</a>
     </div>
   </div>
 
