--- a/level3.html
+++ b/level3.html
@@ -18,11 +18,11 @@
     }
 
     h2 {
-      color: #444;
+      color: #333;
       margin-top: 40px;
     }
 
-    .subject {
+    .course {
       background-color: #ffffff;
       border: 1px solid #ccc;
       border-radius: 10px;
@@ -32,15 +32,14 @@
       cursor: pointer;
       box-shadow: 0 4px 10px rgba(0,0,0,0.05);
       transition: background-color 0.2s ease;
-      position: relative;
     }
 
-    .subject:hover {
+    .course:hover {
       background-color: #f0f8ff;
     }
 
-    .subject-title {
-      font-size: 1.2em;
+    .course-title {
+      font-size: 1.1em;
       font-weight: bold;
       display: flex;
       justify-content: space-between;
@@ -56,17 +55,10 @@
       transform: rotate(180deg);
     }
 
-    .hint {
-      font-size: 0.8em;
-      color: #777;
-      margin-top: 5px;
-    }
-
     .paper-links {
       display: none;
       margin-top: 15px;
       text-align: left;
-      transition: all 0.3s ease;
     }
 
     .paper-links a {
@@ -84,27 +76,25 @@
 </head>
 <body>
 
-  <h1>Level 3 Subjects</h1>
+  <h1>Level 3 Past Papers</h1>
 
   <h2>Computer Science</h2>
 
-  <div class="subject" onclick="togglePapers('csu3200', this)">
-    <div class="subject-title">
-      CSU3200 <span class="arrow">&#9660;</span>
+  <div class="course" onclick="togglePapers('cs_course1', this)">
+    <div class="course-title">
+      Click to view <span class="arrow">&#9660;</span>
     </div>
-    <div class="hint">Click to expand</div>
-    <div id="csu3200" class="paper-links">
+    <div id="cs_course1" class="paper-links">
       <a href="https://drive.google.com/drive/folders/1NAkPuZizTiVhWfbeMAm2-lvEobV6qxbW" target="_blank">CAT Papers</a>
       <a href="https://drive.google.com/drive/folders/1Hyyh_YJ_2pVsQXxi-KEUuc6ybi_nuXYg" target="_blank">Final Papers</a>
     </div>
   </div>
 
-  <div class="subject" onclick="togglePapers('csu3301', this)">
-    <div class="subject-title">
-      CSU3301 <span class="arrow">&#9660;</span>
+  <div class="course" onclick="togglePapers('cs_course2', this)">
+    <div class="course-title">
+      Click to view <span class="arrow">&#9660;</span>
     </div>
-    <div class="hint">Click to expand</div>
-    <div id="csu3301" class="paper-links">
+    <div id="cs_course2" class="paper-links">
       <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-CAT" target="_blank">CAT Papers</a>
       <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-FINAL" target="_blank">Final Papers</a>
     </div>
@@ -112,23 +102,21 @@
 
   <h2>Physics</h2>
 
-  <div class="subject" onclick="togglePapers('phu3300', this)">
-    <div class="subject-title">
-      PHU3300 <span class="arrow">&#9660;</span>
+  <div class="course" onclick="togglePapers('ph_course1', this)">
+    <div class="course-title">
+      Click to view <span class="arrow">&#9660;</span>
     </div>
-    <div class="hint">Click to expand</div>
-    <div id="phu3300" class="paper-links">
+    <div id="ph_course1" class="paper-links">
       <a href="https://drive.google.com/drive/folders/YOUR-PHU3300-CAT" target="_blank">CAT Papers</a>
       <a href="https://drive.google.com/drive/folders/YOUR-PHU3300-FINAL" target="_blank">Final Papers</a>
     </div>
   </div>
 
-  <div class="subject" onclick="togglePapers('phu3301', this)">
-    <div class="subject-title">
-      PHU3301 <span class="arrow">&#9660;</span>
+  <div class="course" onclick="togglePapers('ph_course2', this)">
+    <div class="course-title">
+      Click to view <span class="arrow">&#9660;</span>
     </div>
-    <div class="hint">Click to expand</div>
-    <div id="phu3301" class="paper-links">
+    <div id="ph_course2" class="paper-links">
       <a href="https://drive.google.com/drive/folders/YOUR-PHU3301-CAT" target="_blank">CAT Papers</a>
       <a href="https://drive.google.com/drive/folders/YOUR-PHU3301-FINAL" target="_blank">Final Papers</a>
     </div>
@@ -150,4 +138,3 @@
 
 </body>
 </html>
-
