--- a/index.html
+++ b/index.html
@@ -35,20 +35,14 @@
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
     a {
-      font-size: 1.3em;
+      font-size: 1.2em;
       text-decoration: none;
       color: #0077cc;
       font-weight: bold;
-      display: inline-block;
-      padding: 12px 24px;
-      background-color: #ffffff;
-      border: 2px solid #0077cc;
-      border-radius: 8px;
-      transition: all 0.3s ease;
     }
     a:hover {
-      background-color: #0077cc;
-      color: #ffffff;
+      color: #005fa3;
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -58,7 +52,7 @@
   <img src="https://reginfo.ou.ac.lk/img/main.jpg" alt="OUSL Logo" />
 
   <section>
-    <a href="level3.html">Enter Past Papers Portal →</a>
+    <a href="level3.html">Go to LEVEL 3 Past Papers →</a>
   </section>
 
 </body>
