--- a/level3.html
+++ b/level3.html
@@ -98,6 +98,76 @@
 
   <h1>Level 3 Past Papers</h1>
 
+
+  <!-- Peo Subject -->
+  <h2 onclick="toggleSection(this)">
+    Pure Maths
+    <span class="arrow">&#9660;</span>
+  </h2>
+  <div class="courses">
+    <div class="course" onclick="toggleSectionCourse(event, this)">
+      PEU3300
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/1NAkPuZizTiVhWfbeMAm2-lvEobV6qxbW" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/1Hyyh_YJ_2pVsQXxi-KEUuc6ybi_nuXYg" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+
+    <div class="course" onclick="toggleSectionCourse(event, this)">
+      PEU3301
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-CAT" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-FINAL" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+
+     <div class="course" onclick="toggleSectionCourse(event, this)">
+      PEU3202
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-CAT" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-FINAL" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+  </div>
+
+
+    <!-- Applied Subject -->
+  <h2 onclick="toggleSection(this)">
+    Pure Maths
+    <span class="arrow">&#9660;</span>
+  </h2>
+  <div class="courses">
+    <div class="course" onclick="toggleSectionCourse(event, this)">
+      ADU3300
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/1NAkPuZizTiVhWfbeMAm2-lvEobV6qxbW" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/1Hyyh_YJ_2pVsQXxi-KEUuc6ybi_nuXYg" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+
+    <div class="course" onclick="toggleSectionCourse(event, this)">
+      ADU3201
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-CAT" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-FINAL" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+
+     <div class="course" onclick="toggleSectionCourse(event, this)">
+      ADU3302
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-CAT" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-FINAL" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+  </div>
+
   <!-- Computer Science Subject -->
   <h2 onclick="toggleSection(this)">
     Computer Science
