--- a/level3.html
+++ b/level3.html
@@ -136,7 +136,7 @@
 
     <!-- Applied Subject -->
   <h2 onclick="toggleSection(this)">
-    Pure Maths
+    Applied Maths
     <span class="arrow">&#9660;</span>
   </h2>
   <div class="courses">
