--- a/level3.html
+++ b/level3.html
@@ -193,6 +193,41 @@
     </div>
   </div>
 
+  <!--Chemistry Subject -->
+  <h2 onclick="toggleSection(this)">
+    Chemistry
+    <span class="arrow">&#9660;</span>
+  </h2>
+  <div class="courses">
+    <div class="course" onclick="toggleSectionCourse(event, this)">
+      CYU3300
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/1NAkPuZizTiVhWfbeMAm2-lvEobV6qxbW" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/1Hyyh_YJ_2pVsQXxi-KEUuc6ybi_nuXYg" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+
+    <div class="course" onclick="toggleSectionCourse(event, this)">
+      CYU3201
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-CAT" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-FINAL" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+
+     <div class="course" onclick="toggleSectionCourse(event, this)">
+      CYU3302
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-CAT" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-FINAL" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+  </div>
+
+
   <!-- Physics Subject -->
   <h2 onclick="toggleSection(this)">
     Physics
